# CUDA_project

./: README.md
day1/: helloGPU.cu  helloGPU.exp  helloGPU.lib
day2/: CMakeLists.txt  README.md
day2/include/: kernels.h
day2/src/: kernels.cu  main.cu
day3/: CMakeLists.txt
day3/src/: main_cpu.c  main_gpu.cu
day4/: matrixMul.exp  matrixMul.lib  matrix_mult.cu
day5/: main.exp  main.lib  warp_sync_exam.cu
